/*
    Un batch è un lotto di produzione, di un particolare prodotto di un'azienda.
    Viene creato da un operator di un'azienda successivamente alla registrazione di un evento di Raccolta o Trasformazione, legato
    all'azienda stessa.

    Il batch di produzione è caratterizzato da un id univoco, l'id del prodotto che contiene e due liste. 
    La lista degli operators che asseverano registrazioni sul batch, ordinati cronologicamente, il primo è il creatore. 
    La lista delle aziende che si scambiano tale batch, la prima è quella produttrice.
    Un flag che indica se il lotto è stato messo in vendita o meno (se in vendita, non è possibile effettuare più registrazioni sul lotto)
*/

syntax = "proto3";

message Batch {
    
    // Documento, contiene un riferimento (url) allo storage off-chain e l'hash per l'integrità
    message Document {
        string url = 1;

        string hash = 2;

        string description = 3;
    }

    // Informazioni sul batch
    message Info {
        uint32 size = 1;

        float weight = 2;

        uint32 n_items = 3;

        string description = 4;

        // Opzionale (0 o più)
        repeated Document docs = 5;
    }

    // Un operatore che registra eventi legati al lotto
    message Reporter {
        // Chiave pubblica dell'operatore
        string public_key = 1;

        // Evento al quale fa riferimento
        string event_id = 2;

        // Timestamp della registrazione
        uint64 timestamp = 3;
    }

    // Lista aziende che hanno posseduto il lotto (tramite una Proposal)
    message Company {
        
        // Id azienda
        string id = 1;

        // Timestamp della registrazione
        uint64 timestamp = 2;
    }

    // Id univoco del batch
    string id = 1;

    // Id del prodotto contenuto nel batch
    string product_id = 2;

    // Lista operatori (il primo è il "creatore" del batch) 
    repeated Reporter operators = 3;

    // La lista delle aziende che se lo sono passate (la prima è l'azienda di produzione)
    repeated Company companies = 4;

    // Flag per le registrazioni (se true non si può più scrivere un evento sul batch)
    bool end = 5;

    // Informazioni sul batch (grandezza, numero oggetti, ecc.)
    Info info = 6;

    // Timestamp creazione
    uint64 timestamp = 7;
}

message BatchContainer {
    repeated Batch entries = 1;
}