/*
    Un Event è un evento significativo che accade all'interno di una Company o per un Batch.
    Un event può essere registrato dagli Operators solo per una specifica Company o Batch appartenenti a quella Company.
    Per la gestione degli Events, poiché mantenere una lista degli stessi all'interno della company o del lotto, risulterebbe
    in un processo di accesso, lettura e scrittura troppo dispendioso, è necessario gestire essi in indirizzi separati
    da quello in cui son salvati i dati di company e batch.
    
    Per ogni evento conosco: un identificativo univoco, la company o il batch, la sua tipologia (Raccolta, Trasformazione, ecc.), una descrizione
    e info aggiuntive in base al tipo
*/

syntax = "proto3";

message Event {

    // Documento, contiene un riferimento (url) allo storage off-chain e l'hash per l'integrità
    message Document {
        string url = 1;

        string hash = 2;

        string description = 3;
    }

    // Informazioni sull'evento
    message Info {
        string description = 1;

        // Opzionale (0 o più)
        repeated Document docs = 2;
    }

    // Tipologia dell'evento
    enum EventType {
        HARVESTED = 0;
        TRASFORMATION = 1;
        CERTIFICATION = 2;
        GENERIC = 3;
    }

    // Id univoco dell'evento
    string id = 1;

    // Tipologia dell'evento
    EventType type = 2;

    // Informazioni significative
    Info infos = 3;

    // Chiave pubblica dell'Operator
    string reporter = 4;

    // Timestamp
    uint64 timestamp = 5;

    HarvestedInfo harvested = 6;
    TrasformationInfo trasformation = 7;
    CertificationInfo certification = 8;
    GenericInfo generic = 9;
    
}

 /* INFORMAZIONI IN BASE ALLA TIPOLOGIA */

// Harvested
message HarvestedInfo {
    // Prodotto del raccolto
    string product = 1;

    float quantity = 2;

    string company_cf = 3;
}

// Trasformation
message TrasformationInfo { 

    enum TrasformationType {
        BOTTLING = 1;
        SPLITTING = 2;
        TREATMENT = 3;
        PACKAGING = 4;
    }
    // Prodotto trasformato
    string out_product = 1;

    TrasformationType type = 2;

    // Batch di riferimento (batch di in_product) da consumare per la trasformazione
    repeated string batches = 3;

    float quantity = 4;

    string company_cf = 5;

}

// Certification
message CertificationInfo {

    enum CertificationType {
        ANALYSIS = 0;
        TREATMENT = 1;
        ENVIRONMENT = 2;
        //...
    }

    // Tipo della certificazione
    CertificationType type = 1;

    // L'azienda
    string company_cf = 2;

    // Il batch di un'azienda
    string batch_id = 3;
}

// Generic
message GenericInfo { 

    // L'azienda
    string company_cf = 1;

    // Il batch di un'azienda
    string batch_id = 2;

}

message EventContainer {
    repeated Event entries = 1;
}